--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -5,11 +5,11 @@ global.notLoggedIn.info=Dieser Inhalt ist nur f&uuml;r angemeldete User sichtbar
 global.notRegisteredYet=Wenn Sie sich noch nicht registriert haben, klicken Sie bitte
 global.alreadyRegistered=Wenn Sie sich bereits registriert haben, klicken Sie bitte
 global.clickHereLink=hier
-home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier k&ouml;nnen Sie sich f&uuml;r Seminare einschreiben, Tests absolvieren und Ihre pers&ouml;nliche Creditpoints-Übersicht anzeigen.
+home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier k&ouml;nnen Sie sich f&uuml;r Seminare einschreiben, Tests absolvieren und Ihre pers&ouml;nliche Creditpoints-&Uuml;bersicht anzeigen.
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
 home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, k&ouml;nnen Sie den Test &uuml;ber den erscheinenden Button starten.
-home.loggedIn.emptyListStudent=Momentan sind Sie f&uuml;r kein Seminar angemeldet, schreiben Sie sich zunächst in einem Seminar ein.
-home.loggedIn.emptyListLecturer=Momentan sind für kein Seminar eingetragen, legen Sie zunächst ein Seminar an.
+home.loggedIn.emptyListStudent=Momentan sind Sie f&uuml;r kein Seminar angemeldet, schreiben Sie sich zun&auml;chst in einem Seminar ein.
+home.loggedIn.emptyListLecturer=Momentan sind f&uuml;r kein Seminar eingetragen, legen Sie zun&auml;chst ein Seminar an.
 home.loggedIn.testInfoLecturer=Von hier gelangen Sie &uuml;ber die Buttons zu allen Seiten, die zum Verwalten von Tests und Seminaren gebraucht werden.
 home.StartTestButton=starte Test
 home.add-testButton=Test hinzuf&uuml;gen
@@ -19,7 +19,7 @@ home.tableHeaderName=Seminar-Name
 home.tableHeaderDate=Startdatum - Enddatum
 home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
-home.noTest=Kein Test verfügbar
+home.noTest=Kein Test verf&uuml;gbar
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
 editTest.addQuestionButton=Fragen hinzuf&uuml;gen
@@ -29,14 +29,14 @@ editTest.TableHeaderEdit=Frage verwalten
 editTest.EditQuestionButton=Frage bearbeiten
 editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
 editTest.emptyQuestionList=Bitte dr&uuml;cken Sie den Button, um die erste Frage zum Test hinzuzuf&uuml;gen
-editTest.startedEmpty=Der Testzeitraum hat begonnen, Sie können keine Frage mehr hinzufügen
+editTest.startedEmpty=Der Testzeitraum hat begonnen, Sie k&ouml;nnen keine Frage mehr hinzuf&uuml;gen
 editTest.tooltip=Der Testzeitraum hat bereits begonnen
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdatum
 test.selectEnddate=Enddatum
 test.selectDuration=Dauer
-test.selectPassThreshold=Bestehensgrenze
+test.selectPassThreshold=Bestehensgrenze in %
 test.selectFalseAnswerGrading=Bewertung falscher Antworten:
 contact.title=Kontakt
 contact.contactHeadline=Kontakt
@@ -66,7 +66,9 @@ addQuestion-form.points=Punktzahl
 addQuestion-form.question=Frage
 addQuestion-form.answer=Antwort
 addQuestion-form.position=Position
-addQuestion-form.submit=Hinzuf&uuml;gen
+button.submit=Hinzuf&uuml;gen
+button.save=Speichern
+button.register=Registrieren
 addQuestion.info=Hier erstellen Sie eine Frage mit den entsprechenden Antwortm&ouml;glichkeiten:
 addQuestion.gapInfo=L&uuml;cke als [*] in Fragentext kennzeichnen.
 editQuestion.info=Hier k&ouml;nnen Sie die Frage und die Antwortm&ouml;glichkeiten bearbeiten:
@@ -94,26 +96,25 @@ loginForm.welcomeText=Herzlich Willkommen auf dem Seminarportal der NORDAKADEMIE
 loginForm.instruction=Bitte melden Sie sich an.
 loginForm.eMail=E-Mail
 loginForm.password=Passwort
-global-errorPage.OPS=Oops
 notLoggedInErrorPage.title=Nicht angemeldet
-notLoggedInErrorPage.info=Diese Seite ist nur für angemeldete User sichtbar.
+notLoggedInErrorPage.info=Diese Seite ist nur f&uuml;r angemeldete User sichtbar.
 alreadyLoggedInErrorPage.title=Bereits angemeldet.
 alreadyLoggedInErrorPage.info=Sie sind bereits angemeldet.
-alreadyLoggedInErrorPage.linkToHomeText=Wenn Sie zur Startseite möchten, klicken Sie bitte
+alreadyLoggedInErrorPage.linkToHomeText=Wenn Sie zur Startseite m&ouml;chten, klicken Sie bitte
 insufficientPermissionsErrorpage.title=Berechtigungsfehler
-insufficientPermissionsErrorpage.info=Sie verfügen leider nicht über die benötigten Berechtigungen um diese Aktion auszuführen.
+insufficientPermissionsErrorpage.info=Sie verf&uuml;gen leider nicht &uuml;ber die ben&ouml;tigten Berechtigungen um diese Aktion auszuf&uuml;hren.
 alreadyEnrolledErrorPage.title=Sie sind bereits angemeldet
-alreadyEnrolledErrorPage.info=Sie haben sich bereits für das Seminar angemeldet.
+alreadyEnrolledErrorPage.info=Sie haben sich bereits f&uuml;r das Seminar angemeldet.
 testAlreadyStartedErrorPage.title=Test bereits gestartet
-testAlreadyStartedErrorPage.info=Sie können den Test leider nicht mehr bearbeiten, da dieser bereits begonnen hat.
+testAlreadyStartedErrorPage.info=Sie k&ouml;nnen den Test leider nicht mehr bearbeiten, da dieser bereits begonnen hat.
 genericErrorPage.title=Allgemeiner Fehler
 genericErrorPage.info=Ein allgemeiner Fehler ist aufgetreten.
 seminarNotFoundErrorPage.title=Seminar existiert nicht
 seminarNotFoundErrorPage.info=Entschuldigung, dieses Seminar existiert leider nicht :(
 impressum.headline= Impressum
-impressum.Info=NORDAKADEMIE gemeinnützige Aktiengesellschaft
-impressum.school.Info=Staatlich anerkannte Fachhochschule mit dualen Studiengängen
-impressum.street=Köllner Chaussee 11
+impressum.Info=NORDAKADEMIE gemeinn&uuml;tzige Aktiengesellschaft
+impressum.school.Info=Staatlich anerkannte Fachhochschule mit dualen Studieng&auml;ngen
+impressum.street=K&ouml;llner Chaussee 11
 impressum.city= 25337 Elmshorn
 impressum.phone=+49 (0)4121 4090-0
 impressum.fax=+49 (0)4121 4090-40
@@ -123,41 +124,42 @@ impressum.title=Impressum
 logout.info= Sie haben sich erfolgreich abgemeldet
 logout.seeyou= Bis bald!
 logout.title=Loqout
-registration.Step1=Herzlichen Glückwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
-registration.email=Wir haben Ihnen einen Link zugeschickt. Öffnen Sie diesen bitte, um die Registrierung abzuschließen.
+registration.Step1=Herzlichen Gl&uuml;ckwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
+registration.email=Wir haben Ihnen einen Link zugeschickt. &Ouml;ffnen Sie diesen bitte, um die Registrierung abzuschließen.
 question.single=Einfache Wahl
 question.multiple=Mehrfachwahl
-question.cloze=Lückentext
-questionFieldError.points=Bitte wählen Sie eine Punktzahl >0
+question.cloze=L&uuml;ckentext
+questionFieldError.points=Bitte geben Sie eine Punktzahl >0 an
 questionFieldError.texts=Bitte geben Sie einen Text ein
-questionFieldError.answers=Bitte geben Sie einen Text für die Antworten an
-questionFieldError.gapAnswers=Bitte wählen Sie mindestens eine Lücke
-questionFieldError.correctAnswers=Bitte wählen Sie eine korrekte Antwort
+questionFieldError.answers=Bitte geben Sie Text der Antworten an
+questionFieldError.gapAnswers=Bitte w&auml;hlen Sie mindestens eine L&uuml;cke
+questionFieldError.correctAnswers=Bitte w&auml;hlen Sie eine korrekte Antwort
+questionFieldError.questionType=Bitte w&auml;hlen Sie einen Fragetype
 loginFieldError.mail= Bitte geben Sie ihre Mailadresse an
 loginFieldError.nak= Bitte geben Sie eine Nordakademie Mailadresse an
-loginFieldError.mailValid=Bitte geben Sie eine gültige Mailadresse an
-loginFieldError.activation=Bitte aktivieren Sie ihren Account mit dem Bestätigungslink, den Sie per Mail erhalten haben
-loginFieldError.validPassword=Bitte geben Sie ein gültiges Passwort ein
+loginFieldError.mailValid=Bitte geben Sie eine g&uuml;ltige Mailadresse an
+loginFieldError.activation=Bitte aktivieren Sie ihren Account mit dem Best&auml;tigungslink, den Sie per Mail erhalten haben
+loginFieldError.validPassword=Bitte geben Sie ein g&uuml;ltiges Passwort ein
 loginFieldError.wrongPassword=Das eingegebene Passwort ist falsch
 performTestFieldError.token=Das Token ist inkorrekt
-persistSeminarFieldError.validStart=Bitte geben Sie ein gültiges Startdatum an
-persistSeminarFieldError.validEnd=Bitte geben Sie ein gültiges Enddatum an
+persistSeminarFieldError.validStart=Bitte geben Sie ein g&uuml;ltiges Startdatum an
+persistSeminarFieldError.validEnd=Bitte geben Sie ein g&uuml;ltiges Enddatum an
 persistSeminarFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwart an
 persistSeminarFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
 persistSeminarFieldError.description=Bitte geben Sie eine Seminarbeschreibung an
 persistSeminarFieldError.maxParticipants=Bitte geben Sie eine Anzahl an Teilnehmern >0 an
 persistSeminarFieldError.name=Bitte geben Sie einen Seminarnamen an
-persistTestFieldError.validStart=Bitte geben Sie ein gültiges Startdatum an
-persistTestFieldError.validEnd=Bitte geben Sie ein gültiges Enddatum an
+persistTestFieldError.validStart=Bitte geben Sie ein g&uuml;ltiges Startdatum an
+persistTestFieldError.validEnd=Bitte geben Sie ein g&uuml;ltiges Enddatum an
 persistTestFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwart an
 persistTestFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
-persistTestFieldError.duration=Bitte geben Sie eine gültige Dauer an
+persistTestFieldError.duration=Bitte geben Sie eine g&uuml;ltige Dauer an
 persistTestFieldError.minScore=Bitte geben Sie eine Mindestpunktzahl >0 an
 persistTestFieldError.seminarStart=Ein Test kann nicht vor dem Seminar starten
 registrationMail.subjectLine=Ihre Regestrierung am Nordakademie Seminartool
-registrationMail.textBeginning=<p>Vielen Dank für Ihre Regestrierung am Nordakademie Seminartool. Öffnen Sie biete den folgenden Link, um die Registierung abzuschließen</p>
-registrationMail.textEnding=<p>Wenn Sie denn Link nicht direkt öffnen können, versuchen Sie diesen in einen Browser zu kopieren.</p>
-registrationMail.textGreeting=<p>Mit freundlichen Grüßen,</p>
+registrationMail.textBeginning=<p>Vielen Dank f&uuml;r Ihre Regestrierung am Nordakademie Seminartool. &Ouml;ffnen Sie biete den folgenden Link, um die Registierung abzuschließen</p>
+registrationMail.textEnding=<p>Wenn Sie denn Link nicht direkt &ouml;ffnen k&ouml;nnen, versuchen Sie diesen in einen Browser zu kopieren.</p>
+registrationMail.textGreeting=<p>Mit freundlichen Gr&uuml;ßen,</p>
 registrationMail.textSignature= <p>Ihr Nordakademie Seminartool</p>
 registrationFieldError.firstName=Bitte geben Sie Ihren Vornamen an
 registrationFieldError.lastName=Bitte geben Sie Ihren Nachnamen an
@@ -165,15 +167,15 @@ registrationFieldError.mail=Bitte geben Sie Ihre Mailadresse an
 registrationFieldError.nakMail=Bitte geben Sie eine Nordakademie Mailadresse an
 registrationFieldError.mailRegistrated=Diese Mailadresse ist bereits angemeldet
 registrationFieldError.passwordLen=Bitte geben Sie ein Passwort mit mindestens 8 Zeichen an
-registrationFieldError.passwordCriteria=Bitte wählen Sie ein Passwort, welches mindestens drei der erwähnten Kriterien erfüllt
+registrationFieldError.passwordCriteria=Bitte w&auml;hlen Sie ein Passwort, welches mindestens drei der erw&auml;hnten Kriterien erf&uuml;llt
 question.answer=Antwort
 questionType.single=Eine korrekte Antwort
 questionType.multiple=Mehrere korrekte Antworten
-questionType.cloze=Lückentext
+questionType.cloze=L&uuml;ckentext
 applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
-applicationAdministration.infoText=Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
+applicationAdministration.infoText=Anschließend k&ouml;nenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
 home.title=Home
 seminarDetail.title=Seminar Details
 seminarDetail.name=Seminar Name
@@ -194,11 +196,11 @@ seminarList.period=Startdatum-Enddatum
 seminarList.lecturer=Dozent
 seminarList.participants=Teiln.
 seminarList.title=Seminar Liste
-performTest.title=Test durchführuen
+performTest.title=Test durchf&uuml;hruen
 registration.title=Registrierung
 registration.error=Leider ist bei der Registrierung ein Fehler aufgetreten.
 registration.tryAgain=Bitte versuchen Sie es erneut.
-registration.successMessage=Herzlichen Glückwunsch! Sie haben den letzten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
-registration.loginReady=Sie können sich jetzt anmelden und den vollen Umfang der Seminare genießen.
+registration.successMessage=Herzlichen Gl&uuml;ckwunsch! Sie haben den letzten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
+registration.loginReady=Sie k&ouml;nnen sich jetzt anmelden und den vollen Umfang der Seminare genießen.
 registration.identificationError=Leider konnten wir Sie nicht eindeutig identifizieren.
 registration.tryLink=Bitte kopieren Sie den Ihnen zugeschickten Link in den Browser und versuchen Sie es erneut.
