--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -36,7 +36,7 @@ test.selectCredits=Credits
 test.selectStartdate=Startdate
 test.selectEnddate=Enddate
 test.selectDuration=Duration
-test.selectPassThreshold=Passing Threshold
+test.selectPassThreshold=Passing Threshold in %
 test.selectFalseAnswerGrading=Grading of false answers:
 contact.title=Contact
 contact.contactHeadline=Contact
@@ -66,7 +66,9 @@ addQuestion-form.points=Points
 addQuestion-form.question=Question
 addQuestion-form.answer=Answer
 addQuestion-form.position=Position
-addQuestion-form.submit=Submit
+button.submit=Submit
+button.save=Save
+button.register=Register
 addQuestion.info=On this page you can add a question with its answer possibilities:
 addQuestion.gapInfo=mark gap as [*] in question text
 addQuestion.infoTextSingle=press "+" / "-" to add answer possibilites. Exactly one answer could be marked as correct.
@@ -133,6 +135,7 @@ questionFieldError.texts=Please enter a question text
 questionFieldError.answers=Please add a text to your answers
 questionFieldError.gapAnswers=Please add at least one gap
 questionFieldError.correctAnswers=Please choose a correct answer
+questionFieldError.questionType=Please choose a question type
 loginFieldError.mail= Please enter your mail address
 loginFieldError.nak= Please enter a Nordakademie mail address
 loginFieldError.mailValid=Please enter a valid mail address
