Implement Test Result persistance

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -19,6 +19,7 @@ home.tableHeaderName=Seminar-Name
 home.tableHeaderDate=Startdatum - Enddatum
 home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
+home.testAbsolved=Test bereits absolviert
 home.noTest=Kein Test verf&uuml;gbar
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
