--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -20,6 +20,7 @@ home.tableHeaderDate=start date - end date
 home.startTest= start test
 home.AdministrateTest= administrate test
 home.noTest=No test available
+home.testAbsolved=Test already absolved
 add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
