improve initialization (name lists)

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -177,6 +177,7 @@ applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
 applicationAdministration.infoText=Anschließend k&ouml;nenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
+applicationAdministration.quantSeminar=Anzahl Seminare (max. 40)
 home.title=Home
 seminarDetail.title=Seminar Details
 seminarDetail.name=Seminar Name
