--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -178,6 +178,7 @@ applicationAdministration.title=Application administration
 applicationAdministration.quantLecturer=Number of Lecturers
 applicationAdministration.quantStudent=Number of Students
 applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
+applicationAdministration.quantSeminar=Number of Seminars (max. 40)
 home.title=Home
 seminarDetail.title=Seminar details
 seminarDetail.name=Seminar name
