--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -9,7 +9,7 @@ home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakade
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
 home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, k&ouml;nnen Sie den Test &uuml;ber den erscheinenden Button starten.
 home.loggedIn.emptyListStudent=Momentan sind Sie f&uuml;r kein Seminar angemeldet, schreiben Sie sich zun&auml;chst in einem Seminar ein.
-home.loggedIn.emptyListLecturer=Momentan sind f&uuml;r kein Seminar eingetragen, legen Sie zun&auml;chst ein Seminar an.
+home.loggedIn.emptyListLecturer=Momentan sind Sie f&uuml;r kein Seminar eingetragen, legen Sie zun&auml;chst ein Seminar an.
 home.loggedIn.testInfoLecturer=Von hier gelangen Sie &uuml;ber die Buttons zu allen Seiten, die zum Verwalten von Tests und Seminaren gebraucht werden.
 home.StartTestButton=starte Test
 home.add-testButton=Test hinzuf&uuml;gen
@@ -71,11 +71,11 @@ button.submit=Hinzuf&uuml;gen
 button.save=Speichern
 button.register=Registrieren
 addQuestion.info=Hier erstellen Sie eine Frage mit den entsprechenden Antwortm&ouml;glichkeiten:
-addQuestion.gapInfo=L&uuml;cke als [*] in Fragentext kennzeichnen.
+addQuestion.gapInfo=L&uuml;cke als [...] in Fragentext kennzeichnen.
 editQuestion.info=Hier k&ouml;nnen Sie die Frage und die Antwortm&ouml;glichkeiten bearbeiten:
 addQuestion.infoTextSingle=F&uuml;gen Sie &uuml;ber die Button "+" / "-" Antwort-Optionen hinzu, wobei genau eine durch die Checkbox als richtig markiert werden darf
 addQuestion.infoTextMultiple=F&uuml;gen Sie &uuml;ber die Button "+" / "-" Antwort-Optionen hinzu, wobei beliebig viele Antworten richtig sein k&ouml;nnen
-addQuestion.infoTextGap=Es werden automatisch entsprechend der L&uuml;cken ([*])in Ihrem Text Antwortfelder angezeigt. 1. Antwortfeld = 1. L&uuml;cke im Text.
+addQuestion.infoTextGap=Es werden automatisch entsprechend der L&uuml;cken ([...])in Ihrem Text Antwortfelder angezeigt. 1. Antwortfeld = 1. L&uuml;cke im Text.
 frameHeader.systemName=Pr&uuml;fungssystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Seminar ausw&auml;hlen
