--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,7 +9,7 @@ home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakad
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
 home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
 home.loggedIn.emptyListStudent=You aren't registrated for a seminar at this moment, please enroll in a seminar first.
-home.loggedIn.emptyListLecturer=You aren't listed for a seminar, please create on seminar first.
+home.loggedIn.emptyListLecturer=You aren't listed for a seminar, please create one seminar first.
 home.StartTestButton=start test
 home.add-testButton=add test
 home.EditTestButton=edit test
@@ -71,7 +71,7 @@ button.submit=Submit
 button.save=Save
 button.register=Register
 addQuestion.info=On this page you can add a question with its answer possibilities:
-addQuestion.gapInfo=mark gap as [*] in question text
+addQuestion.gapInfo=mark gap as [...] in question text
 addQuestion.infoTextSingle=press "+" / "-" to add answer possibilites. Exactly one answer could be marked as correct.
 addQuestion.infoTextMultiple=press "+" / "-" to add answer possibilites. you can choose how many are correct.
 addQuestion.infoTextGap=the answerfields will be added automatically. First answerfield = first gap.
