Add button icons

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -23,7 +23,7 @@ home.testAbsolved=Test bereits absolviert
 home.noTest=Kein Test verf&uuml;gbar
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
-editTest.addQuestionButton=Fragen hinzuf&uuml;gen
+editTest.addQuestionButton=Frage hinzuf&uuml;gen
 editTest.TableHeaderPos= Position der Frage im Test
 editTest.TableHeaderText=Frage
 editTest.TableHeaderEdit=Frage verwalten
