implement HTTP-Error-Handling

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,9 +1,10 @@
 ####
 # Naming pattern: <PageName>.<loggedInState>.<messageDescriptor>
-####
+#### TODO ÜÖÄ am ende ersetzen
 global.notLoggedIn.info=Dieser Inhalt ist nur f&uuml;r angemeldete User sichtbar. Bitte loggen Sie sich ein.
 global.notRegisteredYet=Wenn Sie sich noch nicht registriert haben, klicken Sie bitte
 global.alreadyRegistered=Wenn Sie sich bereits registriert haben, klicken Sie bitte
+global.homeLink=Wenn Sie zur Startseite möchten, klicken Sie bitte
 global.clickHereLink=hier
 home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier k&ouml;nnen Sie sich f&uuml;r Seminare einschreiben, Tests absolvieren und Ihre pers&ouml;nliche Creditpoints-&Uuml;bersicht anzeigen.
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
@@ -112,6 +113,8 @@ genericErrorPage.title=Allgemeiner Fehler
 genericErrorPage.info=Ein allgemeiner Fehler ist aufgetreten.
 seminarNotFoundErrorPage.title=Seminar existiert nicht
 seminarNotFoundErrorPage.info=Entschuldigung, dieses Seminar existiert leider nicht :(
+errorpage400.info=Sie sollen doch nicht so viel herumspielen...Jetzt ist es kaputt :(
+errorpage500.info=Leider ist ein Serverfehler aufgetreten. Das tut uns leid.
 impressum.headline= Impressum
 impressum.Info=NORDAKADEMIE gemeinn&uuml;tzige Aktiengesellschaft
 impressum.school.Info=Staatlich anerkannte Fachhochschule mit dualen Studieng&auml;ngen
