--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,7 @@
 global.notLoggedIn.info=This page is visbile for logged in users only. Please log in.
 global.notRegisteredYet=If you are not already registered, please click
 global.alreadyRegistered=If you are alreay registered, please click
+global.homeLink=If you want to see the home-site, please click
 global.clickHereLink=here
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
@@ -113,7 +114,9 @@ genericErrorPage.title=Generic Error
 genericErrorPage.info=A generic error occurred.
 seminarNotFoundErrorPage.title=Seminar does not exist
 seminarNotFoundErrorPage.info=Sorry, but this seminar does not exist :(
-impressum.headline= Disclaimer
+errorpage400.info=You shouldn't play that much...Now it's broken :(
+errorpage500.info=Unfortunately a servererror occured. We are really sad about this :(
+impressum.headline=Disclaimer
 impressum.Info=Nordakademie not for profit public company
 impressum.school.Info=public recognized university of applied science - dual education system
 impressum.street=Köllner Chaussee 11
