Refactor Example Data generator to fit into an MVC Pattern

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -158,7 +158,7 @@ persistTestFieldError.validEnd=Bitte geben Sie ein g&uuml;ltiges Enddatum an
 persistTestFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwart an
 persistTestFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
 persistTestFieldError.duration=Bitte geben Sie eine g&uuml;ltige Dauer an
-persistTestFieldError.minScore=Bitte geben Sie eine Mindestpunktzahl >0 an
+persistTestFieldError.passingThreshold=Bitte geben Sie eine Mindestpunktzahl >0 an
 persistTestFieldError.seminarStart=Ein Test kann nicht vor dem Seminar starten
 registrationMail.subjectLine=Ihre Regestrierung am Nordakademie Seminartool
 registrationMail.textBeginning=<p>Vielen Dank f&uuml;r Ihre Regestrierung am Nordakademie Seminartool. &Ouml;ffnen Sie biete den folgenden Link, um die Registierung abzuschließen</p>
@@ -179,8 +179,8 @@ questionType.cloze=L&uuml;ckentext
 applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
-applicationAdministration.infoText=Anschließend k&ouml;nenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
-applicationAdministration.quantSeminar=Anzahl Seminare (max. 40)
+applicationAdministration.infoText=Anschließend k&ouml;nenn Sie sich wie folgt am System anmelden: <Vorname>-<Nachname>@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
+applicationAdministration.quantSeminar=Anzahl Seminare
 home.title=Home
 seminarDetail.title=Seminar Details
 seminarDetail.name=Seminar Name
