--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -159,7 +159,7 @@ persistTestFieldError.validEnd=Please enter a valid end date
 persistTestFieldError.startInPast=Please enter start date, which is not in the past
 persistTestFieldError.startBeforeEnd=Please enter an end date following the start date
 persistTestFieldError.duration=Please enter a valid duration
-persistTestFieldError.minScore=Please enter a minimum score >0
+persistTestFieldError.passingThreshold=Please enter a minimum score >0
 persistTestFieldError.seminarStart=A test can't start before the seminar started
 registrationMail.subjectLine=Your registration at the Nordakademie Seminartool
 registrationMail.textBeginning=<p>Thank you for registering at the Nordakademie Seminartool. Please open the following link to complete your registration</p>
@@ -180,8 +180,8 @@ question.answer=Answer
 applicationAdministration.title=Application administration
 applicationAdministration.quantLecturer=Number of Lecturers
 applicationAdministration.quantStudent=Number of Students
-applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
-applicationAdministration.quantSeminar=Number of Seminars (max. 40)
+applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: <Vorname>-<Nachname>@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
+applicationAdministration.quantSeminar=Number of Seminars
 home.title=Home
 seminarDetail.title=Seminar details
 seminarDetail.name=Seminar name
