--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -22,6 +22,7 @@ home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
 home.testAbsolved=Test bereits absolviert
 home.noTest=Kein Test verf&uuml;gbar
+home.seminarFinished=Seminar ist bereits beendet
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
 editTest.addQuestionButton=Frage hinzuf&uuml;gen
@@ -98,6 +99,7 @@ loginForm.welcomeText=Herzlich Willkommen auf dem Seminarportal der NORDAKADEMIE
 loginForm.instruction=Bitte melden Sie sich an.
 loginForm.eMail=E-Mail
 loginForm.password=Passwort
+global-errorPage.OPS=Oops
 notLoggedInErrorPage.title=Nicht angemeldet
 notLoggedInErrorPage.info=Diese Seite ist nur f&uuml;r angemeldete User sichtbar.
 alreadyLoggedInErrorPage.title=Bereits angemeldet.
@@ -129,7 +131,7 @@ logout.info= Sie haben sich erfolgreich abgemeldet
 logout.seeyou= Bis bald!
 logout.title=Loqout
 registration.Step1=Herzlichen Gl&uuml;ckwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
-registration.email=Wir haben Ihnen einen Link zugeschickt. &Ouml;ffnen Sie diesen bitte, um die Registrierung abzuschließen.
+registration.email=Wir haben Ihnen einen Link zugeschickt. &Ouml;ffnen Sie diesen bitte, um die Registrierung abzuschlie&szlig;en.
 question.single=Einfache Wahl
 question.multiple=Mehrfachwahl
 question.cloze=L&uuml;ckentext
@@ -155,16 +157,19 @@ persistSeminarFieldError.maxParticipants=Bitte geben Sie eine Anzahl an Teilnehm
 persistSeminarFieldError.name=Bitte geben Sie einen Seminarnamen an
 persistTestFieldError.validStart=Bitte geben Sie ein g&uuml;ltiges Startdatum an
 persistTestFieldError.validEnd=Bitte geben Sie ein g&uuml;ltiges Enddatum an
-persistTestFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwart an
+persistTestFieldError.startInPast=Bitte geben Sie ein Startdatum in der Zukunft an
 persistTestFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
 persistTestFieldError.duration=Bitte geben Sie eine g&uuml;ltige Dauer an
 persistTestFieldError.passingThreshold=Bitte geben Sie eine Mindestpunktzahl >0 an
 persistTestFieldError.seminarStart=Ein Test kann nicht vor dem Seminar starten
 registrationMail.subjectLine=Ihre Regestrierung am Nordakademie Seminartool
-registrationMail.textBeginning=<p>Vielen Dank f&uuml;r Ihre Regestrierung am Nordakademie Seminartool. &Ouml;ffnen Sie biete den folgenden Link, um die Registierung abzuschließen</p>
+registrationMail.textBeginning=<p>Vielen Dank f&uuml;r Ihre Regestrierung am Nordakademie Seminartool. &Ouml;ffnen Sie biete den folgenden Link, um die Registierung abzuschlie&szlig;en</p>
 registrationMail.textEnding=<p>Wenn Sie denn Link nicht direkt &ouml;ffnen k&ouml;nnen, versuchen Sie diesen in einen Browser zu kopieren.</p>
-registrationMail.textGreeting=<p>Mit freundlichen Gr&uuml;ßen,</p>
+registrationMail.textGreeting=<p>Mit freundlichen Gr&uuml;&szlig;en,</p>
 registrationMail.textSignature= <p>Ihr Nordakademie Seminartool</p>
+tokenMail.opening=Lieber
+tokenMail.token=<p>Bitte entnehme deinen pers&ouml;nlichen Token zum &Ouml;ffnen des Tests unten.</p>
+tokenMail.tokenTest=Dein pers&oouml;nlicher Token f&uuml;r den Test in
 registrationFieldError.firstName=Bitte geben Sie Ihren Vornamen an
 registrationFieldError.lastName=Bitte geben Sie Ihren Nachnamen an
 registrationFieldError.mail=Bitte geben Sie Ihre Mailadresse an
@@ -179,7 +184,7 @@ questionType.cloze=L&uuml;ckentext
 applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
-applicationAdministration.infoText=Anschließend k&ouml;nenn Sie sich wie folgt am System anmelden: <Vorname>-<Nachname>@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
+applicationAdministration.infoText=Anschlie&szlig;end k&ouml;nenn Sie sich wie folgt am System anmelden: <Vorname>-<Nachname>@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
 applicationAdministration.quantSeminar=Anzahl Seminare
 home.title=Home
 seminarDetail.title=Seminar Details
@@ -196,6 +201,7 @@ seminarDetail.firstName=Vorname
 seminarDetail.lastName=Nachname
 seminarDetail.number=Nummer
 seminarDetail.enroll=Einschreiben
+seminarDetail.past=Das Seminar ist bereits beendet
 seminarList.name=Seminar Name
 seminarList.period=Startdatum-Enddatum
 seminarList.lecturer=Dozent
@@ -206,6 +212,6 @@ registration.title=Registrierung
 registration.error=Leider ist bei der Registrierung ein Fehler aufgetreten.
 registration.tryAgain=Bitte versuchen Sie es erneut.
 registration.successMessage=Herzlichen Gl&uuml;ckwunsch! Sie haben den letzten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
-registration.loginReady=Sie k&ouml;nnen sich jetzt anmelden und den vollen Umfang der Seminare genießen.
+registration.loginReady=Sie k&ouml;nnen sich jetzt anmelden und den vollen Umfang der Seminare genie&szlig;en.
 registration.identificationError=Leider konnten wir Sie nicht eindeutig identifizieren.
 registration.tryLink=Bitte kopieren Sie den Ihnen zugeschickten Link in den Browser und versuchen Sie es erneut.
