--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,6 +22,7 @@ home.startTest= start test
 home.AdministrateTest= administrate test
 home.noTest=No test available
 home.testAbsolved=Test already absolved
+home.seminarFinished=Seminar has already finished
 add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
@@ -166,6 +167,9 @@ registrationMail.textBeginning=<p>Thank you for registering at the Nordakademie 
 registrationMail.textEnding=<p>If you cant open the link directly, try to copy and paste it directly into your browser.</p>
 registrationMail.textGreeting=<p>Yours sincerely,</p>
 registrationMail.textSignature= <p>The Nordakademie Seminartool</p>
+tokenMail.opening=Dear
+tokenMail.token=<p>Please find your personal token for accessing the test below.</p>
+tokenMail.tokenTest=Your personal token for your test in
 registrationFieldError.firstName=Please enter your firstname
 registrationFieldError.lastName=Please enter your lastname
 registrationFieldError.mail=Please enter your mail address
@@ -197,6 +201,7 @@ seminarDetail.firstName=Firstname
 seminarDetail.lastName=Lastname
 seminarDetail.number=Number
 seminarDetail.enroll=Enroll
+seminarDetail.past=The seminar is already finished
 seminarList.name=Seminar name
 seminarList.period=Startdate-Enddate
 seminarList.lecturer=Lecturer
