Change EvaluationType to I18N

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -215,3 +215,5 @@ registration.successMessage=Herzlichen Gl&uuml;ckwunsch! Sie haben den letzten S
 registration.loginReady=Sie k&ouml;nnen sich jetzt anmelden und den vollen Umfang der Seminare genie&szlig;en.
 registration.identificationError=Leider konnten wir Sie nicht eindeutig identifizieren.
 registration.tryLink=Bitte kopieren Sie den Ihnen zugeschickten Link in den Browser und versuchen Sie es erneut.
+evaluationType.fatal=0 Punkte f&uuml;r Fragen mit falscher Antwort
+evaluationType.substract=Verliere einen Punkt f&uuml;r falsche Antworten
