--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -215,3 +215,5 @@ registration.successMessage=Congratulations! You finished the last step of regis
 registration.loginReady=You are now able to login and enjoy the extent of our seminars.
 registration.identificationError=Unfortunately, we coulnd't identify you correctly.
 registration.tryLink=Please copy the link you received in the browser and try again.
+evaluationType.fatal=Get total 0 points for single wrong answer
+evaluationType.substract=Loose points on wrong answer
