Add text to test result page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -217,3 +217,5 @@ registration.identificationError=Leider konnten wir Sie nicht eindeutig identifi
 registration.tryLink=Bitte kopieren Sie den Ihnen zugeschickten Link in den Browser und versuchen Sie es erneut.
 evaluationType.fatal=0 Punkte f&uuml;r Fragen mit falscher Antwort
 evaluationType.substract=Verliere einen Punkt f&uuml;r falsche Antworten
+testresult.info=Ihr Testergebnis:
+testresult.points=Punkte
