--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -217,3 +217,5 @@ registration.identificationError=Unfortunately, we coulnd't identify you correct
 registration.tryLink=Please copy the link you received in the browser and try again.
 evaluationType.fatal=Get total 0 points for single wrong answer
 evaluationType.substract=Loose points on wrong answer
+testresult.info=Your Testresult:
+testresult.points=Points
