Fix wrong Seminar distribution to lecturer

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -184,7 +184,7 @@ questionType.cloze=L&uuml;ckentext
 applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
-applicationAdministration.infoText=Anschlie&szlig;end k&ouml;nenn Sie sich wie folgt am System anmelden: <Vorname>-<Nachname>@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
+applicationAdministration.infoText=Anschlie&szlig;end k&ouml;nenn Sie sich wie folgt am System anmelden: Vorname-Nachname@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
 applicationAdministration.quantSeminar=Anzahl Seminare
 home.title=Home
 seminarDetail.title=Seminar Details
