--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -184,7 +184,7 @@ question.answer=Answer
 applicationAdministration.title=Application administration
 applicationAdministration.quantLecturer=Number of Lecturers
 applicationAdministration.quantStudent=Number of Students
-applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: <Vorname>-<Nachname>@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
+applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: Vorname-Nachname@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
 applicationAdministration.quantSeminar=Number of Seminars
 home.title=Home
 seminarDetail.title=Seminar details
