Implement db state check before allowing the creation of test data

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -219,3 +219,4 @@ evaluationType.fatal=0 Punkte f&uuml;r Fragen mit falscher Antwort
 evaluationType.substract=Verliere einen Punkt f&uuml;r falsche Antworten
 testresult.info=Ihr Testergebnis:
 testresult.points=Punkte
+applicationAdministration.alreadyRun.infoText=Bitte löschen Sie Ihre Datenbank, bevor Sie neue Testdaten anlegen.
