--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -219,3 +219,4 @@ evaluationType.fatal=Get total 0 points for single wrong answer
 evaluationType.substract=Loose points on wrong answer
 testresult.info=Your Testresult:
 testresult.points=Points
+applicationAdministration.alreadyRun.infoText=Please delete your DB before creating new test data.
