Deactivate tests if no question available

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -22,6 +22,7 @@ home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
 home.testAbsolved=Test bereits absolviert
 home.noTest=Kein Test verf&uuml;gbar
+home.testNoQuestion=Ein Fehler ist aufgetreten. Bitte kontaktieren Sie ihren Dozenten.
 home.seminarFinished=Seminar ist bereits beendet
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
