--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,6 +22,7 @@ home.startTest= start test
 home.AdministrateTest= administrate test
 home.noTest=No test available
 home.testAbsolved=Test already absolved
+home.testNoQuestion=An Error occured. Please contact the lecturer.
 home.seminarFinished=Seminar has already finished
 add-test.title=Create a Test
 edit-test.title=Edit a Test
